--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,8 @@
 mensage.invalida=Mensagem Inv\u00E1lida
+recurso.nao-encontrado=Recurso n\u00E3o encontrado
+recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida
+pessoa.inexistente-ou-inativa=Pessoa inexistente o inativa para incluir no lan\u00E7amento
+
+categoria.nome=Nome
+
+pessoa.nome=Nome
